Fix vertical alignment of messages

--- a/content/css/main.css
+++ b/content/css/main.css
@@ -457,7 +457,9 @@ form .item-select {
 
 .scroll {
 	position: relative;
-	height: 100%
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 .pull-right {
